Update UI v2.0.0 (Include password field in the front & back end)

--- a/package.json
+++ b/package.json
@@ -1,14 +1,12 @@
 {
-  "name": "lease-free",
+  "name": "lease",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.4.1",
+    "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
-    "express-session": "^1.17.0",
-    "google-maps-react": "^2.0.2",
     "react": "^16.13.0",
     "react-bootstrap": "^1.0.0-beta.17",
     "react-dom": "^16.13.0",
@@ -36,9 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "concurrently": "^5.1.0"
   }
-  
 }
